# SlideSage

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.py
docker/: Dockerfile  docker-compose.yml
examples/output/Storage Nepal/: Storage Nepal.md  Storage Nepal_metadata.json
scripts/: setup.sh
src/: libre_pptx_to_pdf.py  parser.py
src/utils/: generate_metadata.py  multimodal_llm.py
